2011-11-16 Roman
- Archive: Archives connections update to Archivators on it start.
- SYS: Argument 'startSt' is recovered into function taskCreate() for wait to user's function call.
- SYS: Default format is set on empty format's argument for function TSYS::time2str(time_t, const string&).
- Archive.DBArch: Field 'MESS' of messages table is set to no Key type for store big messages on DB MySQL and other DB with limited key size.
- FIX:DAQ.OPC_UA: Different OpenSSL versions using is fixed.


2011-11-13 Roman
- !:SYS: Mostly warnings clear caused by option -Wall.


2011-11-12 Roman
- !!!!:FIX:Archive.FSArch: Incorrect not aligned blocks' end processing on value offset calculate into fast bit count algoritm call is fixed.
    Monopoly resource is used to function calcVlOff() call for prevent partialy cache using on high loaded systems.
- !!!:FIX:UI.Vision, UI.WebVision: Out of range access to values vector on trends build and fast, by half dividing interval,
    algoritm for diagram's parameter values get of primitive "Diagram" is fixed.
- SYS: Global source tree version is changed to 0.7.2
- Archive: Task for values archiving by periodic ~60s is restored to signal SIGALRM terminate mode after fix critial error into Archive.FSArch.


2011-11-11 Maxim
- FIX:UI.Vision: Saving the previous inundationItems container is done during removing or creation fills in the ElFigure editor
                 for the correct EnDo/ReDo functions work.

2011-11-10 Maxim
- FIX:UI.Vision: Unnecessary calls of the "shapeSave" function are removed when properties dialog is accepted in the primitive ElFigure
                 to optimize the performance and UnDo/ReDo functions.
- UI.Vision: UnDo/ReDo is done for the dynamic properties of the primitive ElFigure.
- FIX:UI.Vision: moveUpDown function is optimized and fixed for the primitive ElFigure.
- FIX:UI.Vision: falling of the system when trying to create the fill, having the 'Connections' button disabled, using the